fix <p> spacing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -26,7 +26,7 @@
 
 }
 
-p {
+.about > p {
     text-align: justify;
     margin-inline: 24px;
 }
@@ -45,7 +45,7 @@ p {
         padding-left: 64px;
         padding-right: 64px;
     }
-    p {
+    .about > p {
         margin-inline: 64px;
     }
 }
@@ -70,7 +70,7 @@ p {
         padding-left: 80px;
         padding-right: 80px;
     }
-    p {
+    .about > p {
         margin-inline: 80px;
     }
 }
